syntax = "proto3";

option csharp_namespace = "grpcServer";

package greets;

service Greeter {

  rpc SayHello (HelloRequest) returns (HelloReply); 
  rpc Calculator (CalculatorRequest) returns (CalculatorReply); 

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message CalculatorRequest {
  int32 sayi1=1;
  int32 sayi2=2;
}

message CalculatorReply {
  int32 toplam =1;
}
